--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URI="mongodb://localhost:27017/project-db"
+# MONGO_URI="mongodb://localhost:27017/project-db"
 PORT=3000
 EMAIL="fokundem.com@gmail.com"
 PASSWORD="fram hxmo nbio zpbe"
 HUNTERIO_API_KEY=31dc534687bf2ae1a6a290197de9cbbf1a5beb9a
 API_KEY=at_Y072ZYbq3od8JDkvNZNpej82nSdCr
-# MONGO_URI=mongodb+srv://fokundemcom:fokundem653%40@cluster1.yo8up.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGO_URI=mongodb+srv://fokundemcom:fokundem653%40@cluster1.yo8up.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
